# starlab-test

./: README.md  alembic.ini  docker-compose.yml  dockerfile  initialize.bash  pyproject.toml  run.bash
alembic/: env.py
alembic/versions/: 20230317_1702_693b5104b3ab_add_employee.py  20230317_1907_b5c838b07684_add_position_for_employee.py
app/: .env  base.py  config.py  main.py
app/endpoints/: employees.py
app/models/: base.py  employee.py
app/pydantic_models/: base.py  employee.py
app/scripts/: init_db.py
app/templates/: index.html
app/utils/: error_handlers.py
