[tool.poetry]
name = "starlab-test"
version = "0.1.0"
description = ""
authors = ["Ivan Krupin <igelfiend@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.5.post1"
psycopg2 = "^2.9.5"
aiohttp = "^3.8.4"
alembic = "^1.10.2"
gunicorn = "^20.1.0"
pydantic = {extras = ["dotenv"], version = "^1.10.6"}
sqlalchemy-repr = "^0.1.0"
aiohttp-jinja2 = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
